package org.example;

public enum AccountType {
    CONSUMER,CORPORATION
}
